--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nunjucks": "^3.2.2"
+    "method-override": "^3.0.0",
+    "multer": "^1.4.2",
+    "nunjucks": "^3.2.2",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
